--- a/DesignPatterns.AbstractFactory/DesignPatterns.AbstractFactory.csproj
+++ b/DesignPatterns.AbstractFactory/DesignPatterns.AbstractFactory.csproj
@@ -8,9 +8,11 @@
   <ItemGroup>
     <None Remove="Interfaces\" />
     <None Remove="Concrete\" />
+    <None Remove="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Concrete\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 </Project>
